# Gossip

./: .env  .gitignore  ANDROID_GUIDE.md  Makefile  Protocols.md  README.md  build_android.sh  go.mod  go.sum  main.go
.agent/rules/: code-style-guide.md
internal/chat/: cli.go  handler.go  handler_test.go  regression_test.go  tui.go  ui_constants.go
internal/config/: config.go  config_test.go
internal/logging/: logger.go
internal/meshnet/: bindings.go  peer.go
meshnet/: CMakeLists.txt  README.md
meshnet/include/: connection.h  crypto.h  frame.h  gossip_net.h  handshake.h  identity.h  logging.h  mesh_node.h  packet.h  protocol.h  session.h  trust_store.h
meshnet/src/: connection.cpp  crypto.cpp  frame.cpp  gossip_net.cpp  handshake.cpp  identity.cpp  logging.cpp  mesh_node.cpp  session.cpp  trust_store.cpp
meshnet/tests/: test_crypto.cpp  test_handshake.cpp  test_regressions.cpp  test_session.cpp
